--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+{% load staticfiles %}
 <!--
 Template Name: login
 -->
@@ -14,11 +15,11 @@ Template Name: login
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="" name="description" />
   <meta content="" name="author" />
-  <link href="assets/bootstrap-rtl/css/bootstrap-rtl.min.css" rel="stylesheet" />
-  <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
-  <link href="css/style_responsive.css" rel="stylesheet" />
-  <link href="css/style_default.css" rel="stylesheet" id="style_color" />
+  <link href="{% static "assets/bootstrap-rtl/css/bootstrap-rtl.min.css" %}" rel="stylesheet" />
+  <link href="{% static "assets/font-awesome/css/font-awesome.css" %}" rel="stylesheet" />
+  <link href="{% static "css/style.css" %}" rel="stylesheet" />
+  <link href="{% static "css/style_responsive.css" %}" rel="stylesheet" />
+  <link href="{% static "css/style_default.css" %}" rel="stylesheet" id="style_color" />
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
@@ -27,7 +28,7 @@ Template Name: login
   <div class="login-header">
       <!-- BEGIN LOGO -->
       <div id="logo" class="center">
-          <img src="img/logo1.png" alt="logo" class="center" />
+          <img src="{% static "img/logo1.png" %}" alt="logo" class="center" />
       </div>
       <!-- END LOGO -->
   </div>
@@ -35,7 +36,11 @@ Template Name: login
   <!-- BEGIN LOGIN -->
   <div id="login">
     <!-- BEGIN LOGIN FORM -->
-    <form id="loginform" class="form-vertical no-padding no-margin" action="index.html">
+      {% if form.errors %}
+          <p class="error">Sorry, that's not a valid username or password</p>
+      {% endif %}
+    <form id="loginform" class="form-vertical no-padding no-margin" action="" method="post">
+        {% csrf_token %}
       <div class="lock">
           <i class="icon-lock"></i>
       </div>
@@ -45,22 +50,14 @@ Template Name: login
           <div class="control-group">
               <div class="controls">
                   <div class="input-prepend">
-                      <span class="add-on"><i class="icon-user"></i></span><input id="input-username"  type="text" placeholder="Email" />
+                      <span class="add-on"><i class="icon-user"></i></span><input id="input-username" name="username"  type="text" placeholder="نام کاربری" />
                   </div>
               </div>
           </div>
           <div class="control-group">
               <div class="controls">
                   <div class="input-prepend">
-                      <span class="add-on"><i class="icon-key"></i></span><input id="input-password" type="password" placeholder="رمز ورود" />
-                  </div>
-                  <div class="mtop10">
-                      <div class="block-hint pull-right small">
-                          <input type="checkbox" id=""> مرا به یاد بسپار
-                      </div>
-                      <div class="block-hint pull-right">
-                          
-                      </div>
+                      <span class="add-on"><i class="icon-key"></i></span><input id="input-password" name="password" type="password" placeholder="رمز ورود" />
                   </div>
 
                   <div class="clearfix space5"></div>
@@ -68,23 +65,12 @@ Template Name: login
 
           </div>
       </div>
-
+      <input type="hidden" name="next" value="{{ next|escape }}" />
       <input type="submit" id="login-btn" class="btn btn-block login-btn" value="ورود" />
     </form>
     <!-- END LOGIN FORM -->        
     <!-- BEGIN FORGOT PASSWORD FORM -->
-    <form id="forgotform" class="form-vertical no-padding no-margin hide" action="index.html">
-      <p class="center">Enter your e-mail address below to reset your password.</p>
-      <div class="control-group">
-        <div class="controls">
-          <div class="input-prepend">
-            <span class="add-on"><i class="icon-envelope"></i></span><input id="input-email" type="text" placeholder="Email"  />
-          </div>
-        </div>
-        <div class="space20"></div>
-      </div>
-      <input type="button" id="forget-btn" class="btn btn-block login-btn" value="Submit" />
-    </form>
+
     <!-- END FORGOT PASSWORD FORM -->
   </div>
   <!-- END LOGIN -->
@@ -94,10 +80,10 @@ Template Name: login
   </div>
   <!-- END COPYRIGHT -->
   <!-- BEGIN JAVASCRIPTS -->
-  <script src="js/jquery-1.8.3.min.js"></script>
-  <script src="assets/bootstrap-rtl/js/bootstrap.min.js"></script>
-  <script src="js/jquery.blockui.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="{% static "js/jquery-1.8.3.min.js" %}"></script>
+  <script src="{% static "assets/bootstrap-rtl/js/bootstrap.min.js" %}"></script>
+  <script src="{% static "js/jquery.blockui.js" %}"></script>
+  <script src="{% static "js/scripts.js" %}"></script>
   <script>
     jQuery(document).ready(function() {     
       App.initLogin();
