--- a/templates/master.html
+++ b/templates/master.html
@@ -59,11 +59,11 @@
                        <!-- BEGIN USER LOGIN DROPDOWN -->
                        <li class="dropdown">
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                              <span class="username">Mosaddek Hossain</span>
+                              <span class="username">{{  request.user.get_full_name }}</span>
                                <b class="caret"></b>
                            </a>
                            <ul class="dropdown-menu">
-                                <li><a href="login.html"><i class="icon-key"></i>خروج</a></li>
+                                <li><a href="../../accounts/logout/"><i class="icon-key"></i>خروج</a></li>
                            </ul>
                        </li>
                        <!-- END USER LOGIN DROPDOWN -->
