--- a/templates/users.html
+++ b/templates/users.html
@@ -1,145 +1,11 @@
-﻿<!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
-<!-- BEGIN HEAD -->
-<head>
-   <meta charset="utf-8" />
-   <title>لیست کاربران</title>
-   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-   <meta content="" name="description" />
-   <meta content="" name="author" />
-   <link href="assets/bootstrap-rtl/css/bootstrap-rtl.min.css" rel="stylesheet" />
-   <link href="assets/bootstrap-rtl/css/bootstrap-responsive-rtl.min.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-datepicker/styles/jquery.ui.datepicker1.8-all.css" />
-   <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-   <link href="css/style.css" rel="stylesheet" />
-   <link href="css/style_responsive.css" rel="stylesheet" />
-   <link href="css/style_default.css" rel="stylesheet" id="style_color" />
+﻿{% extends "master.html" %}
+{% load staticfiles %}
+{% load tags %}
+{% block title %}
+کاربران
+{% endblock %}
+{% block content %}
 
-   <link href="assets/fancybox/source/jquery.fancybox.css" rel="stylesheet" />
-   <link rel="stylesheet" type="text/css" href="assets/uniform/css/uniform.default.css" />
-</head>
-<!-- END HEAD -->
-<!-- BEGIN BODY -->
-<body class="fixed-top">
-  <!-- BEGIN HEADER -->
-   <div id="header" class="navbar navbar-inverse navbar-fixed-top">
-       <!-- BEGIN TOP NAVIGATION BAR -->
-       <div class="navbar-inner">
-           <div class="container-fluid">
-               <!-- BEGIN LOGO -->
-               <a class="brand" href="index.html">
-                   <img src="img/logo.png" alt="Admin Lab" />
-               </a>
-               <!-- END LOGO -->
-               <!-- BEGIN RESPONSIVE MENU TOGGLER -->
-               <a class="btn btn-navbar collapsed" id="main_menu_trigger" data-toggle="collapse" data-target=".nav-collapse">
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="arrow"></span>
-               </a>
-               <!-- END RESPONSIVE MENU TOGGLER -->
-             
-               <!-- END  NOTIFICATION -->
-               <div class="top-nav ">
-                   <ul class="nav pull-left top-menu" >
-                     
-                       <!-- END SUPPORT -->
-                       <!-- BEGIN USER LOGIN DROPDOWN -->
-                       <li class="dropdown">
-                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                              <span class="username">Mosaddek Hossain</span>
-                               <b class="caret"></b>
-                           </a>
-                           <ul class="dropdown-menu">
-                                <li><a href="login.html"><i class="icon-key"></i>خروج</a></li>
-                           </ul>
-                       </li>
-                       <!-- END USER LOGIN DROPDOWN -->
-                   </ul>
-                   <!-- END TOP NAVIGATION MENU -->
-               </div>
-           </div>
-       </div>
-       <!-- END TOP NAVIGATION BAR -->
-   </div>
-   <!-- END HEADER -->
-   <!-- BEGIN CONTAINER -->
-   <div id="container" class="row-fluid">
-      <!-- BEGIN SIDEBAR -->
-      <div id="sidebar" class="nav-collapse collapse">
-         <div class="sidebar-toggler hidden-phone"></div>
-         <!-- BEGIN RESPONSIVE QUICK SEARCH FORM -->
-         <div class="navbar-inverse">
-            <form class="navbar-search visible-phone">
-               <input type="text" class="search-query" placeholder="Search" />
-            </form>
-         </div>
-         <!-- END RESPONSIVE QUICK SEARCH FORM -->
-         <!-- BEGIN SIDEBAR MENU -->
-          <ul class="sidebar-menu">
-              <li><a class="" href="index.html"><span class="icon-box"><i class="icon-home"></i></span>خانه</a></li>
-              <li class="has-sub">
-                  <a href="javascript:;" class="">
-                      <span class="icon-box"> <i class="icon-book"></i></span> انبارداری
-                      <span class="arrow"></span>
-                  </a>
-                  <ul class="sub">
-                      <li><a class="" href="Inventory.html">لیست کالاها</a></li>
-                      <li><a class="" href="newGood.html">ثبت کالای جدید</a></li>
-
-                      <li><a class="" href="delivery.html">ثبت تحویل کالا</a></li>
-                      <li><a class="" href="unlabeledGoods.html">لیست کالاهای بی‌برچسب</a></li>
-                      <li><a class="" href="attachLabel.html">ثبت رسید کالا</a></li>
-                     
-                  </ul>
-              </li>
-              <li class="has-sub">
-                  <a href="javascript:;" class="">
-                      <span class="icon-box"><i class="icon-file-alt"></i></span> سفارشات
-                      <span class="arrow"></span>
-                  </a>
-                  <ul class="sub">
-                      <li><a class="" href="myOrders.html">سفارشات من</a></li>
-                      <li><a class="" href="addOrder.html">ثبت سفارش</a></li>
-                      <li><a class="" href="unacceptedOrders.html">سفارشات تایید نشده</a></li>
-                      <li><a class="" href="adminAllOrders.html">کل سفارشات</a></li>
-                      <li><a class="" href="buyagent.html">سفارشات تایید شده</a></li>
-                      <li><a class="" href="submitComplaint.html">ثبت شکایت</a></li>
-                      
-                    
-                  </ul>
-              </li>
-             <li class="has-sub">
-                  <a href="javascript:;" class="">
-                      <span class="icon-box"><i class="icon-plus"></i></span>تعمیر و خرابی
-                      <span class="arrow"></span>
-                  </a>
-                  <ul class="sub">
-                      <li><a class="" href="RecordDamage.html">ثبت کالای خراب</a></li>
-                      <li><a class="" href="DamagedGoods.html">کالاهای خراب</a></li>
-                      <li><a class="" href="MyDamagedGoods.html">کالاهای خراب من</a></li>
-                  </ul>
-              </li>
-              
-                 <li class="has-sub">
-                  <a href="javascript:;" class="">
-                      <span class="icon-box"><i class="icon-user"></i></span>کاربران
-                      <span class="arrow"></span>
-                  </a>
-                  <ul class="sub">
-                      <li><a class="" href="addUser.html">اضافه کردن کاربر</a></li>
-                      <li><a class="" href="users.html">لیست کاربران</a></li>
-                  </ul>
-              </li>
-             
-          </ul>
-         <!-- END SIDEBAR MENU -->
-      </div>
-      <!-- END SIDEBAR -->
-      <!-- BEGIN PAGE -->
       <div id="main-content">
          <!-- BEGIN PAGE CONTAINER-->
          <div class="container-fluid">
@@ -147,30 +13,19 @@
             <div class="row-fluid">
                <div class="span12">
                    <!-- BEGIN THEME CUSTOMIZER-->
-                   <div id="theme-change" class="hidden-phone">
-                       <i class="icon-cogs"></i>
-                        <span class="settings">
-                            <span class="text">Theme:</span>
-                            <span class="colors">
-                                <span class="color-default" data-style="default"></span>
-                                <span class="color-gray" data-style="gray"></span>
-                                <span class="color-purple" data-style="purple"></span>
-                                <span class="color-navy-blue" data-style="navy-blue"></span>
-                            </span>
-                        </span>
-                   </div>
+
                    <!-- END THEME CUSTOMIZER-->
                   <!-- BEGIN PAGE TITLE & BREADCRUMB-->     
                   <h3 class="page-title">
                     
-                    لیست کاربران
+کاربران
                   </h3>
                    <ul class="breadcrumb">
                        <li>
                            <a href="#"><i class="icon-home"></i></a><span class="divider">&nbsp;</span>
                        </li>
                       
-                       <li><a href="users.html">لیست کاربران</a><span class="divider-last">&nbsp;</span></li>
+                       <li><a href="">کاربران</a><span class="divider-last">&nbsp;</span></li>
                    </ul>
                   <!-- END PAGE TITLE & BREADCRUMB-->
                </div>
@@ -185,7 +40,7 @@
                     <!-- BEGIN EXAMPLE TABLE widget-->
                     <div class="widget">
                         <div class="widget-title">
-                            <h4><i class="icon-reorder"></i>لیست کاربران</h4>
+                            <h4><i class="icon-reorder"></i>کاربران</h4>
                             <span class="tools">
                                 
                             </span>
@@ -198,13 +53,15 @@
                       
                  
                         <div class="widget-body">
-                            <table class="table table-striped table-bordered" id="accepted_orders">
+                            <table class="table table-striped table-bordered" id="users">
                             <thead>
                                 <tr>
                                     <th>شماره</th>
+									<th class="hidden-phone">نام کاربری</th>
                                     <th class="hidden-phone">نام</th>
+									<th class="hidden-phone">نام‌خانوادگی</th>
                                     <th class="hidden-phone">مسئولیت</th>
-                                    <th class="hidden-phone">رایانامه</th>
+                                   
                                     <th></th>
                                 </tr>
                             </thead>
@@ -285,38 +142,141 @@
          <!-- END PAGE CONTAINER-->
       </div>
       <!-- END PAGE -->
-   </div>
-   <!-- END CONTAINER -->
-   <!-- BEGIN FOOTER -->
-   <div id="footer">
-       2013 &copy;MEHRANIK
-      <div class="span pull-left">
-         <span class="go-top"><i class="icon-arrow-up"></i></span>
-      </div>
-   </div>
-   <!-- END FOOTER -->
-   <!-- BEGIN JAVASCRIPTS -->
-   <!-- Load javascripts at bottom, this will reduce page load time -->
-   <script src="js/jquery-1.8.3.min.js"></script>
-   <script src="assets/bootstrap-rtl/js/bootstrap.min.js"></script>
-   <script src="js/jquery.blockui.js"></script>
-   <!-- ie8 fixes -->
-   <!--[if lt IE 9]>
-   <script src="js/excanvas.js"></script>
-   <script src="js/respond.js"></script>
-   <![endif]-->   
-   <script type="text/javascript" src="assets/uniform/jquery.uniform.min.js"></script>
 
-     
-   <script src="js/scripts.js"></script>
-  
-   <script>
-      jQuery(document).ready(function() {       
-         // initiate layout and plugins
-         App.init();
-      });
-   </script>
-     
-</body>
-<!-- END BODY -->
-</html>
+ {% endblock %}
+{% block scripts %}
+<script type="text/javascript" src="{% static "assets/data-tables/jquery.dataTables.js" %}"></script>
+<script type="text/javascript" src="{% static "assets/data-tables/DT_bootstrap.js" %}"></script>
+<script type="text/javascript" src="{% static "js/csrf.ajax.js" %}"></script>
+    <script>
+        var deleteRow = null;
+        var nEditing = null;
+        $('button[role|="user_delete"]').live("click", function() {
+            deleteRow = $(this).parents('tr')[0];
+            $.ajax({
+                type: "POST",
+                url: "../deleteuser/",  // or just url: "/my-url/path/"
+                data: {
+                    pk:$(this).attr("user")
+
+                },
+                success: function(data) {
+                    oTable.fnDeleteRow(deleteRow);
+                }
+            });
+
+
+        });
+
+        function restoreRow ( oTable, nRow )
+        {
+            oTable.fnDraw();
+        }
+
+        function editRow ( oTable, nRow,button )
+        {
+            var aData = oTable.fnGetData(nRow);
+            var jqTds = $('>td', nRow);
+            var jqInputs = $('input', nRow);
+
+
+            var selected = jqInputs[0].value;
+
+
+            // jqTds[0].innerHTML = '<input type="text" value="'+aData[0]+'">';
+            jqTds[1].innerHTML = '<input class="input-mini" type="text" value="'+aData[1]+'">'; //username
+            jqTds[2].innerHTML = '<input class="input-mini" type="text" value="'+aData[2]+'">'; //firstname
+            jqTds[3].innerHTML = '<input class="input-mini" type="text" value="'+aData[3]+'">'; //lastname
+            jqTds[4].innerHTML = "<select class=\"input-mini\"  " + '>{% user_groups %}</select>'; //group
+            $('select', nRow)[0].value = selected;
+           
+
+            $(button).attr("edittype" , "save");
+            $(button).html( "ذخیره");
+            // jqTds[4].innerHTML = "<textarea>" + description + "</textarea>"; //textArea
+            // jqTds[5].innerHTML =  "<a  order=\"" + aData[0]+ "\" role=\"order_item_edit\" edit_type=\"edit\"   class=\"btn mini green-stripe\">??????</a> <button class=\"btn btn-danger\" type=\"submit\" ><i class=\"icon-remove icon-white\"></i>???</button>";
+        }
+
+        function saveRow ( oTable, nRow ,button)
+        {
+            var aData = oTable.fnGetData(nRow);
+            var jqInputs = $('input', nRow);
+            var jqSelect = $('select',nRow);
+            //var jText = $('textarea', nRow);
+
+            var pk = aData[0];
+            var username = jqInputs[0].value
+            var first_name = jqInputs[1].value
+            var last_name = jqInputs[2].value
+            var group = jqSelect[0].value;
+
+
+            $.ajax({
+                type: "POST",
+                url: "../changeuser/",  // or just url: "/my-url/path/"
+                data: {
+                    pk:pk,
+                    username:username,
+                    first_name:first_name,
+                    last_name:last_name,
+                    group:group
+                },
+                success: function(data) {
+                    oTable.fnDraw();
+                }
+            });
+
+
+
+        }
+        $('button[role|="user_edit"]').live('click', function (e) {
+            e.preventDefault();
+
+            /* Get the row as a parent of the link that was clicked on */
+            var nRow = $(this).parents('tr')[0];
+
+            if ( nEditing !== null && nEditing != nRow ) {
+                /* A different row is being edited - the edit should be cancelled and this row edited */
+                restoreRow( oTable, nEditing );
+                editRow( sTable, nRow );
+                nEditing = nRow;
+            }
+            else if ( nEditing == nRow && $(this).attr("edittype") == "save" ) {
+                /* This row is being edited and should be saved */
+                saveRow( oTable, nEditing );
+                nEditing = null;
+            }
+            else {
+                /* No row currently being edited */
+                editRow( oTable, nRow,this );
+                nEditing = nRow;
+            }
+        } );
+
+    var oTable = $('#users').dataTable({
+    "bFilter" : false,
+    "bProcessing" : true,
+    "bServerSide" : true,
+    "bAutoWidth" : false,
+    "sAjaxSource" : "../json/users",
+    "aaSorting": [[ 0, "desc" ]],
+    "sPaginationType" : "bootstrap",
+    "oLanguage" : {
+    "sLengthMenu" : "_MENU_ رکورد در صفحه",
+    "oPaginate" : {
+    "sPrevious" : "قبلی",
+    "sNext" : "بعدی"
+    }
+    },
+    "aoColumnDefs" : [{
+    'bSortable' : false,
+    'aTargets' : [4]
+    }]
+    });
+
+    jQuery('#users_wrapper').find('.dataTables_filter input').addClass("input-medium");
+    // modify table search input
+    jQuery("#users_wrapper").find('.dataTables_length select').addClass("input-mini");
+    // modify table per page dropdown
+    </script>
+{% endblock %}
